<resources>
    <string name="app_name">Escambo</string>
    <string name="facebook_app_id">1517678455074025</string>
    <string name="fb_login_protocol_scheme">fb1517678455074025</string>
    <string name="app_bg">app bg</string>
    <string name="book_now">Book it now</string>
    <string name="title_home">Schedule</string>
    <string name="title_profile">Profile</string>
    <string name="title_user_history">History</string>
    <string name="home_subtitle">Choose a service, location and \n time.</string>
    <string name="app_slide_images">app slide images</string>
    <string name="schedule_service">Schedule</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="Password">Password</string>
    <string name="phone">Phone</string>
    <string name="new_user">Don\'t have an account?</string>
    <string name="create_account"> <u>Create Account</u></string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="recover"> <u> Recovery password</u></string>
    <string name="policy_privacy">Privacy Policy</string>
    <string name="history">History</string>
    <string name="scheduled">Scheduled.</string>
    <string name="services">Services</string>
    <string name="unit">Establishment</string>
    <string name="service">Service</string>
    <string name="barber">Barber</string>
    <string name="date">Date</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_units">Establishment</string>
    <string name="sched">US$ %d Schedule</string>
    <string name="back_string"><![CDATA[<]]></string>
    <string name="product1">Bussines Haircut(US$ 50,00) - Duration 40 min</string>
    <string name="product2">Classic Haircut(US$ 90,00) - Duration 60 min</string>
    <string name="product3">Flat top HairCutUS$ 55,00) - Duration 20 min</string>
    <string name="product4">Military Haircut(US$ 40,00) - Duration 40 min</string>
    <string name="product5">Kids Haircut(US$ 50,00) - Duration 40 min</string>
    <string name="product6">Old Fashion Haircut(US$ 90,00) - Duration 80 min</string>
    <string name="barber_location">American Shop</string>
    <string name="barber_open">Open</string>
    <string name="barber_closed">Closed</string>
    <string name="dummy_location">Newport,VA </string>
    <string name="dummy_city">Virginia </string>
    <string name="select_location">Select location</string>
    <string name="close">close</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="info_profile_photo">user profile photo</string>
    <string name="credits">Credits</string>
    <string name="need_help">Need Some help?</string>
    <string name="manage_your_account">Manage your account?</string>
    <string name="help_center">Help Center</string>
    <string name="menu_item">menu item</string>
    <string name="save">Save</string>
    <string name="notifications">Notifications</string>
    <string name="navigation_arrow">navigation arrow</string>
    <string name="notification_icon">notification icon</string>
    <string name="insert_ticket">Insert coupon</string>
    <string name="earn_credits">Earn Credits</string>
    <string name="exit">Exit</string>
    <string name="schedule">Schedule</string>
    <string name="no_service_in_list">You don\'t have any \n appointments yet.</string>
    <string name="schedule_now">Schedule now and wait to have \n a great experience.</string>
    <string name="no_history_toshow">There are no items in the history.</string>
    <string name="dummy_name">Ada Lovelace</string>
    <string name="seu_antonio">Mister Joe</string>
    <string name="cancled">Canceled</string>
    <string name="feed">Feed</string>
    <string name="days_afater">5 days before</string>
    <string name="feedback">Feedback</string>
    <string name="Feedback">Feedback</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at fermentum enim. Sed pulvinar consectetur felis id finibus. Sed consectetur finibus nisi, eu sodales tellus rutrum eget. Morbi non justo et nulla lobortis tempus id a mauris. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce placerat nisl nunc, vel egestas lorem commodo quis. Fusce nec ultricies purus.</string>
    <string name="schedule_confirmed">Appointment confirmed!</string>
    <string name="professional">Professional</string>
    <string name="my_schedules">View my appointments</string>
    <string name="craete_your_profile">Create your profile</string>
    <string name="text_presentation_1">Within minutes you will have access to the application services</string>
    <string name="text_presentation_2">Schedule a time that fits your needs.</string>
    <string name="local_service">Choose a lcoation and a service that suits you</string>
    <string name="arriive_on_time">Arrive on time</string>
    <string name="text_presentation_3">Now you are ready to begin.</string>
    <string name="escambo">escambo</string>
    <string name="login_subtitle">Bem vindo ao escambo,\nseu aplicativo de trocas.</string>
    <string name="entrar">Entrar</string>
    <string name="acesse_redes_sociais">Ou acesse utilizando suas redes sociais</string>
    <string name="facebook">Entrar com Facebook</string>
    <string name="google">Entrar com Google</string>
    <string name="createaccount">Crie agora mesmo</string>
    <string name="nao_tem_conta">Não possui conta no escambo?</string>
    <string name="esqueci_senha">Esqueci minha senha</string>
    <string name="water_mark">water mark</string>
    <string name="senha">Senha</string>
    <string name="register_info">Precisamos de algumas \nalgumas informações suas</string>
    <string name="cep">CEP</string>
    <string name="register">Cadastrar</string>
    <string name="full_name">Nome Completo</string>
    <string name="birthdate">Data nascimento</string>
    <string name="uf">Estado</string>
    <string name="city">Cidade</string>
    <string name="tip_password">Esqueceu sua senha? \n Tudo bem, isso acontece.</string>
    <string name="recovery_tip">Nos informe seu e-mail para enviarmos \n uma recuperação de senha</string>
    <string name="enviar">Enviar</string>
    <string name="recovery_tip_3">Endereço de email cadastrado</string>
    <string name="explorar">Explorar</string>
    <string name="anunciar">Anunciar</string>
    <string name="chat">Chat</string>
    <string name="perfil">Perfil</string>
    <string name="explorer">Explorar</string>
    <string name="produto">product</string>
    <string name="top_escambistas">Top escambistas</string>
    <string name="os_maiores_trocadores_do_escambo">Os maiores trocadores do Escambo</string>
    <string name="descubra_escambos_por_perto">Descubra escambos por perto</string>
    <string name="recentes">Recentes</string>
    <string name="escambos_adicionados_recentemente">Escambos adicionados recentemente</string>
    <string name="no_products">Não há produtos para exibir</string>
    <string name="publicar_item">Publicar item</string>
    <string name="tip_take_a_photo">Tire uma foto ou selecione \n uma em sua galeria</string>
    <string name="item_name">Nome do Item</string>
    <string name="description_2">Descrição</string>
    <string name="publicar">Publicar</string>
    <string name="value">Valor</string>
    <string name="Search">Pesquisar</string>
    <string name="category">Categoria</string>
    <string name="localization">Localização</string>
    <string name="search_product_tip">Busque por produtos ou filtre\nde acordo com seu interesse</string>
    <string name="search_tip2">Faça uma pesquisa para\n exibirmos os resultados</string>
    <string name="nothing_yet">Nada Ainda</string>
    <string name="message_tip">Aqui ficam as mensagens de quem \n teve interesse por um item seu</string>
    <string name="messages">Mensagens</string>
    <string name="plus_three">+3</string>
    <string name="title_profile_tip2">Meus itens no Escambo</string>
    <string name="profile_label_itens">Itens Publicados</string>
    <string name="filter">Filtrar</string>
    <string name="select">Selecione</string>
    <string name="cam">Câmera</string>
    <string name="gallery">Galeria</string>
    <string name="notification">Notificações</string>
    <string name="save_it">Salvar</string>
    <string name="filter_by_value">Filtrar pelo valor</string>
    <string name="from">De</string>
    <string name="until">Até</string>
    <string name="filter_by_category">Filtar pela Categoria</string>
    <string name="filter_by_localization">Filtre pela localização.</string>
    <string name="blank_name">Nome em branco</string>
    <string name="invalid_email">E-mail inválido</string>
    <string name="blank_email">E-mail em branco</string>
    <string name="password_min">Mínimo de 8 caracteres</string>
    <string name="blank_pw">Senha em branco</string>
    <string name="birthdate_invalid">Data inválida</string>
    <string name="blank_date">Data em branco</string>
    <string name="invalid_postal_code">Cep inválido</string>
    <string name="blank_postal_code">Cep em branco</string>
    <string name="UF_invalid">UF inválido</string>
    <string name="UF_blank">UF em Branco</string>
    <string name="blank_city">Cidade em branco</string>
    <string name="access">Acesse aqui</string>
    <string name="have_an_account">Já possui conta no escambo?</string>
    <string name="dummy_fullname">Ayrton Senna</string>
    <string name="dummy_location_ful">São Paulo/SP</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque tristique libero sit amet convallis convallis. Nunc dolor libero, dapibus a rhoncus nec, tristique eu orci</string>
    <string name="dummy_valor">R$290,90</string>
    <string name="description">Descrição</string>
    <string name="interest">Interesse em Escambo</string>
    <string name="no_itens">Não há itens para exibir</string>
</resources>
