<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="@dimen/dialog_w"
    android:layout_height="@dimen/dialog_h"
    android:layout_gravity="center"
    android:background="@drawable/bg_dialog_custom"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <TextView
            android:id="@+id/tvDialogTittle"
            style="@style/dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/filter_by_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/tvCloseImageDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@+id/tvDialogTittle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close_black_24dp" />


        <EditText
            android:id="@+id/edtFromDate"
            android:layout_width="93dp"
            android:layout_height="51dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_lines"
            android:gravity="center"
            android:hint="@string/from"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/btnFilterDialog"
            app:layout_constraintEnd_toStartOf="@+id/edtUntilDate"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDialogTittle" />

        <EditText
            android:id="@+id/edtUntilDate"
            android:layout_width="93dp"
            android:layout_height="51dp"
            android:gravity="center"
            android:hint="@string/until"
            android:inputType="number"
            android:background="@drawable/rounded_lines"
            app:layout_constraintBaseline_toBaselineOf="@+id/edtFromDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/edtFromDate" />


        <Button
            android:id="@+id/btnFilterDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_bottom_green"
            android:text="@string/filter"
            android:textAllCaps="false"
            android:visibility="visible"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

