<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:focusable="false"
    android:focusableInTouchMode="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="270dp"
        android:layout_height="190dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_dialog_custom">

        <TextView
            android:id="@+id/tvDialogTittle"
            style="@style/dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/select"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/tvPickFromCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_green_simple"
            android:text="@string/cam"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvPickFromGallery"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDialogTittle" />

        <Button
            android:id="@+id/tvPickFromGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            android:background="@drawable/gradient_green_simple"
            android:textColor="@android:color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvPickFromCamera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvPickFromCamera" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="232dp"
            android:layout_marginBottom="120dp"
            android:fitsSystemWindows="true"
            android:contentDescription="@string/app_name"
            android:adjustViewBounds="true"
            android:visibility="gone"
            android:background="@drawable/dialog_close_shape"
            app:layout_constraintBottom_toTopOf="@+id/btnFilterDialog"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/ivCloseDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close_black_24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>